Fixing ant colony

--- a/document.tex
+++ b/document.tex
@@ -18,7 +18,7 @@
 \bibliographystyle{apacite}
 
 \author{Steven Lowes}
-\title{Software Methodo}
+\title{Software Methodologies AI Search}
 \date{\today{}}
 
 \newcommand{\smartref}[1]{%
@@ -27,7 +27,7 @@
 
 \begin{document}
 
-	\section{Algorithm A: Simmulated Annealing}
+	\section{Algorithm A: Simulated Annealing}
 	
 	\subsection{Results}
 	\label{useCase:socialRespond}
@@ -36,16 +36,18 @@
 		\begin{tabu}{|c c c|}
 			\textbf{Nodes} & \textbf{Tour Length} & \textbf{Time to Compute (s)}\\
 			
-			12 & 10 & 0.2s \\
-			17 & 20 & 0.7s\\
-			21 & 30 & 2s\\
-			26 & 40 & 3s\\
-			42 & 50 & 5s\\
-			48 & 70 & 50s\\
-			58 & 80 & 1m20s\\
-			175 & 100 & 4m50s\\
-			180 & 1,000 & 15m25s\\
-			535 & 48,560 & 1h20m5s\\
+			12 & 56.0 & 0.60s \\
+			17 & 1,444 & 1.02s\\
+			21 & 2,549 & 1.28s\\
+			26 & 1,575 & 2.98s\\
+			42 & 1,322 & 6.27s\\
+			48 & 12,702 & 15.72s\\
+			58 & 25,855 & 19.10s\\
+			175 &  21,770 & 2m25s\\
+			180 & 1,950 & 3.42s\\
+			535 & 50,762 & 1m4s\\
+			535 & 50,124 & 11m16s\\
+			535 & 50,762 & 1m4s\\
 		\end{tabu}
 	\end{center}
 	
